--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,30 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+html {
+  scroll-behavior: smooth;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.radius {
+  border-radius: 2.5rem 0.3rem 2.5rem 0.3rem;
+  /* border: 0.1px solid rgba(0, 0, 0, 0.356); */
+  
 }
