finalisation du site

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins-Regular.ttf') format("opentype");
+}
+* {
+  font-family: Poppins;
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
