--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,6 +42,7 @@ button{
   position: fixed;
   top: 0;
   left: 0;
+ 
   transform: translate(-50%, -50%);
   border-radius: 50%;
  
@@ -71,4 +72,69 @@ body {
   height: 90px;
   background: #fff;
   mix-blend-mode: difference;
+}
+
+
+/* animation texte */
+
+.container {
+  margin: 0 auto;
+  
+}
+.white-text {
+  
+  color: #fff;
+  font-weight: 900;
+  color: transparent;
+  text-align: center;
+  font-size: 0px;
+}
+p span {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  font-size: clamp(20px, 8vw, 120px);
+}
+p span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+}
+.white-text {
+  font-weight: 300;
+  animation: txt-appearance 0s 1s forwards;
+}
+.black-text {
+  animation: txt-appearance 0s 1.25s forwards;
+}
+.white-text span::after {
+  background: white;
+  animation: slide-in 0.5s ease-out forwards,
+  slide-out 0.5s 1s ease-out forwards;
+}
+.black-text span::after {
+  background: black;
+  animation: slide-in 0.75s 0.3s ease-out forwards,
+  slide-out 0.75s 1.3s ease-out forwards;
+}
+
+@keyframes slide-in {
+  100% {
+      transform: translateX(0%);
+  }
+}
+@keyframes slide-out {
+  100% {
+      transform: translateX(110%)
+  }
+}
+@keyframes txt-appearance {
+  100% {
+      color: white;
+  }
 }
