--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ html {
 .super-border {
   position: relative;
 }
-button{
+button {
   cursor: none;
 }
 .super-border::after {
@@ -42,24 +42,22 @@ button{
   position: fixed;
   top: 0;
   left: 0;
- 
+
   transform: translate(-50%, -50%);
   border-radius: 50%;
- 
+  mix-blend-mode: difference;
   pointer-events: none;
 }
 
 .cursor {
- 
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: #000;
+  /* background: #000; */
   z-index: 9999;
   transition: 0.1s;
   transform: translate(-50%, -50%);
   pointer-events: none;
-
   z-index: 10;
 }
 
@@ -67,22 +65,19 @@ body {
   cursor: none;
 }
 
-.content:hover ~ .cursor{
+.content:hover ~ .cursor {
   width: 90px;
   height: 90px;
-  background: #fff;
+  /* background: #fff; */
   mix-blend-mode: difference;
 }
-
 
 /* animation texte */
 
 .container {
   margin: 0 auto;
-  
 }
 .white-text {
-  
   color: #fff;
   font-weight: 900;
   color: transparent;
@@ -105,36 +100,36 @@ p span::after {
   left: 0;
   transform: translateX(-100%);
 }
-.white-text {
+.text1 {
   font-weight: 300;
   animation: txt-appearance 0s 1s forwards;
 }
-.black-text {
+.black-text2 {
   animation: txt-appearance 0s 1.25s forwards;
 }
-.white-text span::after {
-  background: white;
+.white-text1 span::after {
+  background: black;
   animation: slide-in 0.5s ease-out forwards,
-  slide-out 0.5s 1s ease-out forwards;
+    slide-out 0.5s 1s ease-out forwards;
 }
-.black-text span::after {
+.black-text2 span::after {
   background: black;
   animation: slide-in 0.75s 0.3s ease-out forwards,
-  slide-out 0.75s 1.3s ease-out forwards;
+    slide-out 0.75s 1.3s ease-out forwards;
 }
 
 @keyframes slide-in {
   100% {
-      transform: translateX(0%);
+    transform: translateX(0%);
   }
 }
 @keyframes slide-out {
   100% {
-      transform: translateX(110%)
+    transform: translateX(110%);
   }
 }
 @keyframes txt-appearance {
   100% {
-      color: white;
+    color: white;
   }
 }
